syntax = "proto3";

message RevokeSignerJobPayload {
  uint64 fid = 1;
  bytes signer = 2;
}

message UpdateNameRegistryEventExpiryJobPayload {
  bytes fname = 1;
}
